# fastapi-course-unit1

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  test_data_db.sql
admin/: auth.py  views.py
db/: base_dao.py  db.py
images/: router.py
migration/: env.py
migration/versions/: 320e6fadc9c3_init.py
models/: bookings.py  hotels.py  rooms.py  users.py
pages/: router.py
pages/templates/: hotels.html
routers/: __init__.py
routers/admin/: dao.py  depends.py  exceptions.py  router.py  schemas.py
routers/auth/: auth.py  dao.py  depends.py  exceptions.py  router.py  schemas.py
routers/bookings/: dao.py  exceptions.py  router.py  schemas.py  utils.py
routers/hotels/: dao.py  router.py  schemas.py
routers/hotels/rooms/: dao.py  router.py  schemas.py  service.py
routers/users/: auth.py  dao.py  depends.py  router.py  schemas.py
statics/css/: main.css
tasks/: celery_config.py  email_templates.py  tasks.py
